--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import required libraries\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"Orders.csv\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,6 +36,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CustomerID\n",
+       "12346    77183.60\n",
+       "12347     4310.00\n",
+       "12348     1797.24\n",
+       "12349     1757.55\n",
+       "12350      334.40\n",
+       "           ...   \n",
+       "18280      180.60\n",
+       "18281       80.82\n",
+       "18282      178.05\n",
+       "18283     2094.88\n",
+       "18287     1837.28\n",
+       "Name: amount_spent, Length: 4339, dtype: float64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfcom=df.groupby('CustomerID')['amount_spent'].sum()\n",
+    "dfcom"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -25,30 +78,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import required libraries\n",
-    "import numpy as np\n",
-    "import pandas as pd"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Next, extract and import `Orders` dataset into a dataframe variable called `orders`. Print the head of `orders` to overview the data:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# your code here"
    ]
   },
   {
@@ -81,11 +114,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>32732</th>\n",
+       "      <td>52711</td>\n",
+       "      <td>540815</td>\n",
+       "      <td>21108</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>fairy cake flannel assorted colour</td>\n",
+       "      <td>3114</td>\n",
+       "      <td>2011-01-11 12:55:00</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>15749</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>6539.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37126</th>\n",
+       "      <td>61619</td>\n",
+       "      <td>541431</td>\n",
+       "      <td>23166</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>medium ceramic top storage jar</td>\n",
+       "      <td>74215</td>\n",
+       "      <td>2011-01-18 10:01:00</td>\n",
+       "      <td>1.04</td>\n",
+       "      <td>12346</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>77183.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109624</th>\n",
+       "      <td>160546</td>\n",
+       "      <td>550461</td>\n",
+       "      <td>21108</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>fairy cake flannel assorted colour</td>\n",
+       "      <td>3114</td>\n",
+       "      <td>2011-04-18 13:20:00</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>15749</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>6539.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118352</th>\n",
+       "      <td>173382</td>\n",
+       "      <td>551697</td>\n",
+       "      <td>POST</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13</td>\n",
+       "      <td>postage</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2011-05-03 13:46:00</td>\n",
+       "      <td>8142.75</td>\n",
+       "      <td>16029</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>8142.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155418</th>\n",
+       "      <td>222680</td>\n",
+       "      <td>556444</td>\n",
+       "      <td>22502</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>15</td>\n",
+       "      <td>picnic basket wicker 60 pieces</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2011-06-10 15:28:00</td>\n",
+       "      <td>649.50</td>\n",
+       "      <td>15098</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>38970.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>248706</th>\n",
+       "      <td>348325</td>\n",
+       "      <td>567423</td>\n",
+       "      <td>23243</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>set of tea coffee sugar tins pantry</td>\n",
+       "      <td>1412</td>\n",
+       "      <td>2011-09-20 11:05:00</td>\n",
+       "      <td>5.06</td>\n",
+       "      <td>17450</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>7144.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397451</th>\n",
+       "      <td>540421</td>\n",
+       "      <td>581483</td>\n",
+       "      <td>23843</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>paper craft , little birdie</td>\n",
+       "      <td>80995</td>\n",
+       "      <td>2011-12-09 09:15:00</td>\n",
+       "      <td>2.08</td>\n",
+       "      <td>16446</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>168469.60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Unnamed: 0  InvoiceNo StockCode  year  month  day  hour  \\\n",
+       "32732        52711     540815     21108  2011      1    2    12   \n",
+       "37126        61619     541431     23166  2011      1    2    10   \n",
+       "109624      160546     550461     21108  2011      4    1    13   \n",
+       "118352      173382     551697      POST  2011      5    2    13   \n",
+       "155418      222680     556444     22502  2011      6    5    15   \n",
+       "248706      348325     567423     23243  2011      9    2    11   \n",
+       "397451      540421     581483     23843  2011     12    5     9   \n",
+       "\n",
+       "                                Description  Quantity          InvoiceDate  \\\n",
+       "32732    fairy cake flannel assorted colour      3114  2011-01-11 12:55:00   \n",
+       "37126        medium ceramic top storage jar     74215  2011-01-18 10:01:00   \n",
+       "109624   fairy cake flannel assorted colour      3114  2011-04-18 13:20:00   \n",
+       "118352                              postage         1  2011-05-03 13:46:00   \n",
+       "155418       picnic basket wicker 60 pieces        60  2011-06-10 15:28:00   \n",
+       "248706  set of tea coffee sugar tins pantry      1412  2011-09-20 11:05:00   \n",
+       "397451          paper craft , little birdie     80995  2011-12-09 09:15:00   \n",
+       "\n",
+       "        UnitPrice  CustomerID         Country  amount_spent  \n",
+       "32732        2.10       15749  United Kingdom       6539.40  \n",
+       "37126        1.04       12346  United Kingdom      77183.60  \n",
+       "109624       2.10       15749  United Kingdom       6539.40  \n",
+       "118352    8142.75       16029  United Kingdom       8142.75  \n",
+       "155418     649.50       15098  United Kingdom      38970.00  \n",
+       "248706       5.06       17450  United Kingdom       7144.72  \n",
+       "397451       2.08       16446  United Kingdom     168469.60  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "q95=dfcom.quantile(0.95)\n",
+    "q75=dfcom.quantile(0.75)\n",
+    "lista_95 = df[df[\"amount_spent\"] >q95]\n",
+    "lista_75 = df[(df[\"amount_spent\"] > q75) & (df[\"amount_spent\"] < q95)]\n",
+    "lista_95"
    ]
   },
   {
@@ -99,11 +331,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "United Kingdom    7\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "lista_95['Country'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "United Kingdom    109\n",
+       "EIRE                4\n",
+       "Singapore           4\n",
+       "Japan               3\n",
+       "Netherlands         2\n",
+       "France              2\n",
+       "Australia           1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_75['Country'].value_counts()"
    ]
   },
   {
@@ -115,17 +388,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "United Kingdom    116\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "country75=dfcom.quantile(0.75)\n",
+    "country = df[df[\"amount_spent\"] >country75]\n",
+    "country['Country'].value_counts().head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -139,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
